--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.18.1",
-    "pm2": "^5.2.0"
+    "npm": "^8.10.0",
+    "pm2": "^5.2.0",
+    "web-worker": "^1.2.0"
   }
 }
